Atualizar o dashboard.html

--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav>
-        <div class="logo"><img src="../assents/admin.png" alt="admin" width="80px" height="80px"><LIVROTECA<p>Administrador</p></div>
+        <div class="logo"><img src="../assents/admin.png" alt="admin" width="80px" height="80px">LIVROTECA<p>Administrador</p></div>
 
         <div class="menu-btn">
             <i class="fa fa-bars fa-2x" onclick="menuShow()"></i>
