--- a/html/dashboard.html
+++ b/html/dashboard.html
@@ -22,7 +22,7 @@
             <li> <a href="livros.html" >Livros</a> </li>
             <li> <a href="emprestimo.html" >Empréstimos</a> </li>
             <li> <a href="usuarios">Usuários</a> </li>
-            <li> <a href="../login.html">Sair</a> </li>
+            <li> <a href="../index.html">Sair</a> </li>
         </ul>
     </nav>
     <section class="section" id="equipe">
