--- a/html/livros.html
+++ b/html/livros.html
@@ -22,7 +22,7 @@
             <li> <a href="livros.html" class="active"> Livros </a> </li>
             <li> <a href="emprestimo.html" >Empréstimos</a> </li>
             <li> <a href="usuarios.html">Usuários</a> </li>
-            <li> <a href="../login.html">Sair</a> </li>
+            <li> <a href="../index.html">Sair</a> </li>
         </ul>
     </nav>
     
